[package]
name = "co_managed"
version = "0.1.0"
edition = "2018"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]

[dependencies]
may = "0.3"
# dashmap = "5"

# FIXME: switch to the crates.io version after crossbeam-skiplist is released
[dependencies.crossbeam-skiplist]
git = "https://github.com/tikv/crossbeam.git"
branch = "tikv-5.0"
package = "crossbeam-skiplist"
