[package]
name = "co_managed"
version = "0.1.0"
edition = "2021"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
repository = "https://github.com/Xudong-Huang/co_managed.git"
homepage = "https://github.com/Xudong-Huang/co_managed.git"
documentation = "https://docs.rs/co_managed"
description = "Create managed sub coroutines. Managed sub coroutines will be cancelled when the parent exit"
readme = "README.md"
keywords = ["http", "server", "may"]
categories = ["asynchronous"]
license = "MIT/Apache-2.0"

[dependencies]
may = "0.3"
parking_lot = "0.12"
